# std-experimental-simd

./: .appveyor.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: Documentation.cmake  std_experimental_simd-config.cmake.in
experimental/: simd  simd.test.cpp  simd_platform.hpp
simd/: simd  simd.h  simd.test.cpp  simd_platform.hpp  std_experimental_simd.test.cpp
